поправил получение хобби
