# docs/swagger.json
@@ -685,12 +685,9 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/chat.UserHobbyInput"
-                                }
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/chat.UserHobbyInput"
                             }
                         }
                     }
