# pkg/handler/profile.go
@@ -212,7 +212,7 @@ func (h *Handler) uploadAvatar(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param   prof_id path int true "Prof Id"
-// @Param   input body map[string][]chat.UserHobbyInput true "list info"
+// @Param   input body []chat.UserHobbyInput true "list info"
 // @Success 200 {integer} integer 1
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
@@ -225,7 +225,7 @@ func (h *Handler) createHobby(c *gin.Context) {
 		return
 	}
 
-	var input map[string][]chat.UserHobbyInput
+	var input []chat.UserHobbyInput
 	if err := c.BindJSON(&input); err != nil {
 		NewErrorResponse(c, http.StatusBadRequest, err.Error())
 		return
